scrollbar and overflow fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,22 @@ body {
 *::before {
   box-sizing: inherit;
   margin: 0;
-  padding: 0;
+  padding: 0; 
+}
+
+*::-webkit-scrollbar {
+  width: 20px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #979B9B;
+  border-radius: 15px;
+  border: 7.5px solid #fff;
 }
 
 @font-face {
